<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchApi"
        android:title="@string/search_api"
        android:icon="@drawable/ic_search"
        />
    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorites"
        />
    <item
        android:id="@+id/deleteAllDrawerMenu"
        android:title="@string/delete_all_drawer"
        android:icon="@drawable/ic_delete_all"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings_drawer_menu"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/splash_screen_settings"
        android:icon="@drawable/ic_menu_dashboard"
        android:title="@string/slash_settings" />

    <item
        android:id="@+id/logout_drawer_menu"
        android:title="@string/logout"
        android:icon="@drawable/ic_menu_dashboard"
        />

</menu>